<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droid Draw</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_guess">GuessActivity</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="player_one">&quot;Player:  &quot;</string>
    <string name="player_two">"Player 2:  "</string>
    <string name="player_one_edit_hint"> Player\'s username</string>
    <string name="player_two_edit_hint"> Player\'s password</string>
    <string name="player_two_repeat_hint"> Repeat the password</string>
    <string name="start_game">Start Game</string>
    <string name="android_description">Image of Android</string>
    <string name="instructions">How to Play</string>
    <string name="rules_of_game">Player 1 will begin by secretly drawing a picture from a randomly selected category.\nPlayer 2 will then attempt to guess Player 1\'s drawing, using the hint if necessary.\nThe game will continue, with players alternating back and forth until they choose to end the game! The winner is the player with the most points.</string>
    <string name="title_activity_color_select">Color Select</string>
    <string name="color_set">Line Color</string>
    <string name="linewidth">Line Width</string>
    <string name="done">Done</string>
    <string name="title_activity_closing">Closing Activity</string>
    <string name="Drawpicture">Draw Picture</string>
    <string name="guess">Guess:</string>
    <string name="category">Category</string>
    <string name="winner">"Winner: "</string>
    <string name="loser">" Loser: "</string>
    <string name="placeholder">XX</string>
    <string name="winner_image_description">Winner!</string>
    <string name="loser_image_description">Loser!</string>
    <string name="score">"Score: "</string>
    <string name="new_game">New Game</string>
    <string name="clue">"Clue: "</string>
    <string name="answer">"Answer: "</string>
    <string name="p1">Player1 Score</string>
    <string name="p2">Player2 Score</string>
    <string name="p1score">P1 score</string>
    <string name="p2score">P2 score</string>
    <string name="draw">Draw</string>
    <string name="move">Move</string>
    <string name="finish_game">Finish Game</string>
    <string name="time">time</string>
    <string name="hint">&quot;&quot;</string>
    <string name="blank"><String></String></string>
    <string name="title_activity_opening">Opening Activity</string>
    <string name="login">LOGIN</string>
    <string name="new_user">NEW USER</string>
    <string name="temp_launch">TEMP: Launch Game</string>
    <string name="text_password">Password:</string>
    <string name="check_remember">Remember</string>
    <string name="text_waiting">Waiting</string>
    <string name="login_fail">Login Failed</string>
    <string name="user_already_exists">User Already Exists</string>
    <string name="loading">Loading</string>

</resources>