<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colors"
    tools:context=".OpeningActivity" >

    <ImageView
        android:id="@+id/androidImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playerOneEdit"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/android_description"
        android:src="@drawable/android_transparent" />

    <TextView
        android:id="@+id/playerOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playerTwoText"
        android:layout_alignParentLeft="true"
        android:background="#000"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/player_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/playerTwoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerTwoText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerTwoText"
        android:layout_toRightOf="@+id/playerTwoText"
        android:background="#000"
        android:ems="10"
        android:hint="@string/player_two_edit_hint" />

    <EditText
        android:id="@+id/playerOneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerOneText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerOneText"
        android:layout_toRightOf="@+id/playerOneText"
        android:background="#000"
        android:ems="10"
        android:hint="@string/player_one_edit_hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_toBottomOf="@+id/playerTwoEdit" >

        <Button
            android:id="@+id/startGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#222"
            android:text="@string/start_game"
            android:textColor="#fff" />

        <Button
            android:id="@+id/instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#222"
            android:text="@string/instructions"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:id="@+id/playerTwoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_alignParentLeft="true"
        android:background="#000"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/player_two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

</RelativeLayout>