<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colors"
    tools:context=".OpeningActivity" >

    <ImageView
        android:id="@+id/androidImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playerOneText"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/android_description"
        android:src="@drawable/android_transparent" />

    <TextView
        android:id="@+id/playerOneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playerTwoText"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/playerOneEdit"
        android:background="#000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/player_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/playerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerTwoText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerTwoText"
        android:layout_toRightOf="@+id/playerTwoText"
        android:background="#000"
        android:ems="10"
        android:hint="@string/player_two_edit_hint"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textCursorDrawable="@null" />

    <EditText
        android:id="@+id/playerOneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playerOneText"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerOneText"
        android:layout_toRightOf="@+id/playerTwoText"
        android:background="#000"
        android:ems="10"
        android:hint="@string/player_one_edit_hint"
        android:textColor="#fff"
        android:textCursorDrawable="@null" >
        
        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/startGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#222"
            android:onClick="onStartGame"
            android:text="@string/start_game"
            android:textColor="#fff" />
        
        <Button
            android:id="@+id/instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:background="#222"
            android:onClick="onInstructions"
            android:text="@string/instructions"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:id="@+id/playerTwoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:background="#000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/playerPasswordcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/playerPassword"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView01"
        android:background="#000"
        android:ems="10"
        android:hint="@string/player_two_repeat_hint"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textCursorDrawable="@null" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:background="#000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/text_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/playerPasswordcheck"
        android:background="#000"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onRememberChecked"
        android:text="@string/check_remember"
        android:textColor="#fff" />

</RelativeLayout>