<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClosingActivity" >

    <FrameLayout
        android:id="@+id/upperEmptyFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >
        
        <ImageView
            android:id="@+id/winnerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/winner_image_description"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayoutWinnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            android:layout_toRightOf="@+id/winnerImage">

            <TextView
                android:id="@+id/winnerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winner"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/winnerScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/linearLayoutWinnerText"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/winnerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/winnerScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" >
        
        <ImageView
            android:id="@+id/loserImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/loser_image_description"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/linearLayoutLoserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="vertical"
            android:layout_toRightOf="@+id/loserImage">

            <TextView
                android:id="@+id/loserText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loser"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/loserScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/linearLayoutLoserText"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/loserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/loserScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:layout_gravity="center">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game" 
            android:onClick="onNewGame"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/lowerEmptyFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

</LinearLayout>